src/objects/SomDig_SapDatei__c.object
<CustomObject>
    <fields>
        <fullName>SomDig_Buchungskreis__c</fullName>
        <description>gibt den Buchungskreis an, für die jeweilige Faktura- oder Erlösaufteilungsübergabe</description>
        <inlineHelpText>gibt den Buchungskreis an, für die jeweilige Faktura- oder Erlösaufteilungsübergabe</inlineHelpText>
        <label>Buchungskreis</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0029</fullName>
                    <default>true</default>
                    <label>0029</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SomDig_Dateiname__c</fullName>
        <description>der generierte Dateiname für die SAP Übergabedatei</description>
        <formula>IF (RecordType.DeveloperName = &apos;SomDig_Faktura&apos;,
    TEXT(SomDig_Buchungskreis__c) &amp; &quot;_&quot; &amp; TEXT(SomDig_Quellsystem__c) &amp; &quot;_&quot; &amp; SomDig_Verrechnungsmonat__c &amp; &quot;_&quot; &amp; SomDig_Nummer__c &amp; &quot;.txt&quot;,
    IF (RecordType.DeveloperName = &apos;SomDig_Hochrechnung&apos;,
        TEXT(SomDig_Buchungskreis__c) &amp; &quot;_&quot; &amp; TEXT(SomDig_Quellsystem__c) &amp; &quot;_dh_&quot; &amp; RIGHT(TEXT(SomDig_Jahr__c),2) &amp; TEXT(SomDig_Monat__c) &amp; TEXT(SomDig_Tag__c) &amp; &quot;_&quot; &amp; SomDig_Nummer__c &amp; &quot;.txt&quot;,
        IF (RecordType.DeveloperName = &apos;SomDig_Erloesaufteilung&apos;,
            TEXT(SomDig_Buchungskreis__c) &amp; &quot;_&quot; &amp; TEXT(SomDig_Quellsystem__c) &amp; &quot;_ea_&quot; &amp; RIGHT(TEXT(SomDig_Jahr__c),2) &amp; TEXT(SomDig_Monat__c) &amp; TEXT(SomDig_Tag__c) &amp; &quot;_&quot; &amp; SomDig_Nummer__c &amp; &quot;.txt&quot;,
            null
           )
       )
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>der generierte Dateiname für die SAP Übergabedatei</inlineHelpText>
        <label>Dateiname</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_DatumDerErzeugungEA__c</fullName>
        <description>gibt an, wann die SAP-Datei für die Erlösaufteilung erzeugt wurde (YYMMDD)</description>
        <inlineHelpText>gibt an, wann die SAP-Datei für die Erlösaufteilung erzeugt wurde (YYMMDD)</inlineHelpText>
        <label>Datum der Erzeugung (EA)</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_Fakturasperre__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Faktura Sperre</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_Jahr__c</fullName>
        <description>Jahr für &quot;Verrechnungsmonat&quot; Faktura und &quot;Datum der Erzeugung&quot; Erlösaufteilung</description>
        <inlineHelpText>Jahr für &quot;Verrechnungsmonat&quot; Faktura und &quot;Datum der Erzeugung&quot; Erlösaufteilung</inlineHelpText>
        <label>Jahr</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
                <value>
                    <fullName>2026</fullName>
                </value>
                <value>
                    <fullName>2027</fullName>
                </value>
                <value>
                    <fullName>2028</fullName>
                </value>
                <value>
                    <fullName>2029</fullName>
                </value>
                <value>
                    <fullName>2030</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SomDig_Monat__c</fullName>
        <description>Monat für &quot;Verrechnungsmonat&quot; Faktura und &quot;Datum der Erzeugung&quot; Erlösaufteilung</description>
        <inlineHelpText>Monat für &quot;Verrechnungsmonat&quot; Faktura und &quot;Datum der Erzeugung&quot; Erlösaufteilung</inlineHelpText>
        <label>Monat</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SomDig_Nummer__c</fullName>
        <description>4-stellige laufende Nummer, die unterbrechungsfrei fortlaufend pro Buchnungskreis NACH speichern generiert wird.</description>
        <inlineHelpText>4-stellige laufende Nummer, die unterbrechungsfrei fortlaufend pro Buchnungskreis NACH speichern generiert wird.</inlineHelpText>
        <label>Nummer der SAP-Datei</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_Quellsystem__c</fullName>
        <description>gibt das Quellsystem an, aus dem die Faktura- oder Erlösaufteilungsdaten kommen</description>
        <inlineHelpText>gibt das Quellsystem an, aus dem die Faktura- oder Erlösaufteilungsdaten kommen</inlineHelpText>
        <label>Quellsystem</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>advendio</fullName>
                    <default>true</default>
                    <label>advendio</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SomDig_Status__c</fullName>
        <description>gibt den Übertragungsstatus der SAP-Datei an. Wird automatisch gesetzt.</description>
        <inlineHelpText>gibt den Übertragungsstatus der SAP-Datei an. Wird automatisch gesetzt.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>erstellt</fullName>
                    <default>true</default>
                    <label>erstellt</label>
                </value>
                <value>
                    <fullName>Übermittlung</fullName>
                </value>
                <value>
                    <fullName>übermittelt</fullName>
                </value>
                <value>
                    <fullName>Fehler</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SomDig_Tag__c</fullName>
        <description>Tag für &quot;Datum der Erzeugung&quot; Erlösaufteilung</description>
        <inlineHelpText>Tag für &quot;Datum der Erzeugung&quot; Erlösaufteilung</inlineHelpText>
        <label>Tag</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SomDig_TypEA__c</fullName>
        <description>gibt den Typ der Erlösaufteilung an:
- ea = ??? zu klären
- dh = ??? zu klären</description>
        <inlineHelpText>gibt den Typ der Erlösaufteilung an:
- ea = ??? zu klären
- dh = ??? zu klären</inlineHelpText>
        <label>Typ (EA)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ea</fullName>
                </value>
                <value>
                    <fullName>dh</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SomDig_Verrechnungsmonat__c</fullName>
        <description>gibt den Verrechnungsmonat aus Jahr (YY) und Monat (MM) an. Wird automatisch berechnet.</description>
        <formula>RIGHT(TEXT(SomDig_Jahr__c),2) &amp; TEXT(SomDig_Monat__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>gibt den Verrechnungsmonat aus Jahr (YY) und Monat (MM) an. Wird automatisch berechnet.</inlineHelpText>
        <label>Verrechnungsmonat</label>
        <type>Text</type>
    </fields>
    <label>SAP-Datei</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SomDig_Nummer__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>SomDig_Dateiname__c</columns>
        <columns>SomDig_Buchungskreis__c</columns>
        <columns>SomDig_Jahr__c</columns>
        <columns>SomDig_Monat__c</columns>
        <columns>SomDig_Fakturasperre__c</columns>
        <columns>SomDig_Quellsystem__c</columns>
        <columns>SomDig_Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Alle</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>EA</fullName>
        <columns>NAME</columns>
        <columns>SomDig_Nummer__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>SomDig_Dateiname__c</columns>
        <columns>SomDig_Buchungskreis__c</columns>
        <columns>SomDig_Jahr__c</columns>
        <columns>SomDig_Monat__c</columns>
        <columns>SomDig_Fakturasperre__c</columns>
        <columns>SomDig_Quellsystem__c</columns>
        <columns>SomDig_Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>SomDig_SapDatei__c.SomDig_Erloesaufteilung</value>
        </filters>
        <label>EA Erlösaufteilung</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>HR</fullName>
        <columns>NAME</columns>
        <columns>SomDig_Nummer__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>SomDig_Dateiname__c</columns>
        <columns>SomDig_Buchungskreis__c</columns>
        <columns>SomDig_Jahr__c</columns>
        <columns>SomDig_Monat__c</columns>
        <columns>SomDig_Fakturasperre__c</columns>
        <columns>SomDig_Quellsystem__c</columns>
        <columns>SomDig_Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>SomDig_SapDatei__c.SomDig_Hochrechnung</value>
        </filters>
        <label>HR Hochrechnung</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>Year2016</fullName>
        <columns>NAME</columns>
        <columns>SomDig_Nummer__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>SomDig_Dateiname__c</columns>
        <columns>SomDig_Buchungskreis__c</columns>
        <columns>SomDig_Jahr__c</columns>
        <columns>SomDig_Monat__c</columns>
        <columns>SomDig_Fakturasperre__c</columns>
        <columns>SomDig_Quellsystem__c</columns>
        <columns>SomDig_Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SomDig_Jahr__c</field>
            <operation>equals</operation>
            <value>2016</value>
        </filters>
        <label>2016</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>Year2017</fullName>
        <columns>NAME</columns>
        <columns>SomDig_Nummer__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>SomDig_Dateiname__c</columns>
        <columns>SomDig_Buchungskreis__c</columns>
        <columns>SomDig_Jahr__c</columns>
        <columns>SomDig_Monat__c</columns>
        <columns>SomDig_Fakturasperre__c</columns>
        <columns>SomDig_Quellsystem__c</columns>
        <columns>SomDig_Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SomDig_Jahr__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <label>2017</label>
        <language>de</language>
    </listViews>
    <nameField>
        <displayFormat>SAP-Datei-{00000}</displayFormat>
        <label>SAP Datei-Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SAP-Dateien</pluralLabel>
    <recordTypes>
        <fullName>SomDig_Erloesaufteilung</fullName>
        <active>true</active>
        <label>Erlösaufteilung</label>
    </recordTypes>
    <recordTypes>
        <fullName>SomDig_Faktura</fullName>
        <active>true</active>
        <label>Faktura</label>
    </recordTypes>
    <recordTypes>
        <fullName>SomDig_Hochrechnung</fullName>
        <active>true</active>
        <label>Hochrechnung</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>